old-code/kubernetes/cluster-home/apps/networking/whoami-server/app/fullrelease.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: networking
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
          resources:
            limits:
              cpu: 25m
              memory: 263M
            requests:
              cpu: 25m
              memory: 263M
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: networking
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: whoami
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: "ingress.${SECRET_DOMAIN}"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-http-production
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
  labels:
    use-http01-solver: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: &host "whoami.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: whoami-networking-tls
